# dropout_hamiltonian_montecarlo

./: .gitignore  .~lock.output.xlsx#  CMakeLists.txt  README.md  Untitled.ipynb  accuracy.txt  cnn_cifar10.py  cnn_cifar10_chainer.py  cpu_res.txt  cpu_rest.txt  gpu_res.txt  informe-cpu-backend.csv  informe-cpu-backend.py  informe-cpu-ram.csv  informe-cpu-ram.py  informe-gpu-backend.py  informe-gpu-ram.py  iris_samples.h5  loss.csv  loss_sgd_cpu.csv  loss_sgld.csv  mlp_mnist.py  nohup.out  pc@pc-Lenovo-Z40-75  pruebas.py  results_plants_mcdropout.txt  results_plants_sgd.txt  results_plants_sghmc_1000.txt  save_plots.py  sgd_cpu.txt  sgd_gpu.txt  sgd_mnist.npz  sgd_plants.txt  sghmc_plants.txt  test.py  test1.py  test2.py  test_hmc_softmax.py  test_iris_hmc.py  test_iris_sgd.py  (+13 more)
benchmarks/: 1.-Simulated_data.ipynb  2.-MNIST.ipynb
benchmarks/.ipynb_checkpoints/: 1.-Simulated_data-checkpoint.ipynb  2.-MNIST-checkpoint.ipynb
benchmarks/german_bank/: test_hmc_binary.py  test_sgd.py
benchmarks/iris/: L1.py  benchmark.txt  test_hmc.py  test_hmc_covertype.py  test_iris_edward.py  test_iris_hmc.py  test_iris_sgd.py  test_iris_stan.py  test_metropolis.py  test_pymc3.py  test_sgd.py  test_sgd_covertype.py  test_sghmc.py  test_sghmc_gpu.py  test_sgmcmc_covertype.py  test_stan.py  test_stan_logistic.py
benchmarks/linear_model/: linear_pymc.py
benchmarks/mnist/: hmc_cuda.py  test_mnist_hmc.py  test_mnist_keras.py  test_mnist_mcdropout.py  test_mnist_mlp.py  test_mnist_sgd.py  test_mnist_sghmc.py
benchmarks/mvn_gaussian/: .test_metropolis.py.swp  test_hmc.py  test_hmc_mvn.py  test_metropolis.py
benchmarks/plants/: L1  confusion_matrix.py  hdftest.py  loss_sgd_cpu.csv  loss_sgd_gpu.csv  loss_sgld_cpu.csv  loss_sgld_gpu.csv  plants.py  predict_sample.py  predictions.csv  test_hmc.py  test_plants_domain_adaption.py  test_plants_keras.py  test_plants_mcdropout.py  test_plants_sgd.py  test_plants_sghmc.py  test_sgd_dropout.py
benchmarks/simulated_data/: test_hmc_binary.py  test_hmc_multiclass.py  test_pymc3.py  test_pymc3_multiclass.py  test_sgd_binary.py  test_sgd_multiclass.py  test_sghmc_binary.py  test_sghmc_multiclass.py
benchmarks/walmart/: test_walmart_sgd.py
hamiltonian/: hmc.py  hmc2.py  hmccpu.py  hmcgpu.py  iris_sampyl.py  linear.py  logistic.py  logisticcpu.py  logisticcputime.py  logisticgpu.py  logisticgputime.py  metropolis.py  mvn_gaussian.py  poisson.py  pruebaSgldQueue.py  sghmc.py  sghmccpu.py  sgld.py  sgldSimulatedQueue.py  sgldSimulatedQueueGPU.py  sgldcpu.py  softmax.py  softmaxGPU.py  softmax_gpu.py  softmaxcpu.py  softmaxgpu.py  softmaxgputest.py  test_hmc.py  test_hmc2.py  utils.py
hamiltonian/cpu/: hmc.py  hmc_multicore.py  logistic.py  sghmc.py  sghmc_multicore.py  sgld.py  sgldPlants.py  sgldQueue.py  sgld_multicore.py  softmax.py
hamiltonian/gpu/: hmc.py  logistic.py  sgld.py  sgld_multicore.py  softmax.py
hamiltonian/inference/cpu/: hmc.py  sgd.py  sghmc.py  sgld.py
hamiltonian/inference/gpu/: hmc.py  sgd.py  sghmc.py  sgld.py  sgmcmc.py  softmax.py
hamiltonian/models/cpu/: gaussian.py  logistic.py  mvn_gaussian.py  softmax.py
hamiltonian/models/gpu/: logistic.py  mlp.py  mvn_gaussian.py  softmax.py
results/: results_bayesian_plants.npz  results_plants_sgd.txt  results_plants_sghmc.txt
results/informes de pruebas/: Untitled.ipynb  informe-cpu-ram.csv  informe-gpu-ram.csv  informe-gpu-ram.py  informe-sgd-cpu-ram.csv  informe-sgd-gpu-ram.csv  informe-sgd-gpu-ram.py  informe-sgld-cpu-ram.py  informe-sgld-gpu-backend.csv  informe-sgld-mulricore-ram.py  informe-sgld-multicore-ram.csv  informe-sgld-multicore-ram.py  informe_sgd_cpu_ram.csv  informe_sgd_cpu_ram.py  informe_sgd_gpu_ram.py  informe_sgld_cpu_ram.py  informe_sgld_gpu_ram.py  informe_sgld_multicore_ram.py  lanzador.py
results/informes de pruebas/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scalable_bayes_paper/: biblio.bib  crone-template.aux  crone-template.bbl  crone-template.blg  crone-template.tex  crone.cls  ingelectra_presentation.aux  ingelectra_presentation.nav  ingelectra_presentation.snm  ingelectra_presentation.tex  paper_crone.aux  paper_crone.bbl  paper_crone.blg  paper_crone.out  paper_crone.tex  paper_crone.txt  paper_ingelectra.aux  paper_ingelectra.bbl  paper_ingelectra.blg  paper_ingelectra.tex  vancouver-crone.bst
scalable_bayes_paper/results/: loss_sgd_gpu.csv  loss_sgld_cpu.csv  loss_sgld_gpu.csv
scripts/: histogram.py  join_cpp.py  mean_std_analisys.py  test_dropout.sh  test_hmc.sh
src/: test_all_dhmc.cpp  test_all_hmc.cpp  test_hmc.cpp  test_mdhmc_mnist.cpp  test_mhmc_mnist.cpp
src/libs/eigenmvn/: eigenmvn.h
src/likelihood/: CPU_dhmc.cpp  CPU_dhmc.hpp  CPU_hmc.cpp  CPU_hmc.hpp  CPU_logistic_regression.cpp  CPU_logistic_regression.hpp  CPU_mdhmc.cpp  CPU_mdhmc.hpp  CPU_mhmc.cpp  CPU_mhmc.hpp  CPU_softmax_regression.cpp  CPU_softmax_regression.hpp  hmc.cpp  hmc.hpp  logistic_regression.cpp  logistic_regression.hpp  multivariate_gaussian.cpp  multivariate_gaussian.hpp  softmax_regression.cpp  softmax_regression.hpp
src/likelihood/backup0/: logistic_regression.cpp  logistic_regression.hpp  multivariate_gaussian.hpp
src/likelihood/backup1/: CPU_logistic_regression.cpp  logistic_regression.cpp  logistic_regression.hpp  multivariate_gaussian.cpp
src/likelihood/backup2/: CPU_logistic_regression.cpp  logistic_regression.cpp  logistic_regression.hpp
src/likelihood/backup3/: CPU_logistic_regression.cpp  CPU_softmax_regression.cpp  logistic_regression.cpp  softmax_regression.cpp  softmax_regression.hpp  test_lr_gender.cpp
src/utils/: c_utils.cpp  c_utils.hpp
testing/: aux.py  testGPU.py  testSgldMatrixQueue.py  testSgldPlantsQueue.py  testSgldQueue.py  testSgldSimulatedQueue.py  testSgldSimulatedQueueGPU.py  testhdf5.py  testsgldcpu.py  total_test.py
testing/cpu/: hmc_binary.py  hmc_multiclass.py  sgd_binary.py  sgd_multiclass.py  sghmc_binary.py  sghmc_multiclass.py  sgldPlants_multiclass.py  sgldQueue_multiclass.py  sgld_binary.py  sgld_multiclass.py
testing/gpu/: hmc_multiclass.py  sgd_binary.py  sgd_multiclass.py  sgld_multiclass.py
(+13 files in other folders)
